--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="kr.me.ansr.tab.chat.ChatFragment" >
+    tools:context=".tab.chat.multitypelist.ChatFragment" >
 
     <ListView
         android:id="@+id/listView1"
