--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -8,5 +8,13 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
-
+    <item
+        android:id="@+id/logout"
+        android:orderInCategory="101"
+        android:title="logout"
+        app:showAsAction="never">
+    </item>
+<!--android:icon="@drawable/d_write_next_button_ok"
+app:showAsAction="always|withText"
+-->
 </menu>
