--- a/app/src/main/res/layout/a_content_login.xml
+++ b/app/src/main/res/layout/a_content_login.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="kr.me.ansr.gcmchat.activity.LoginActivity"
-    tools:showIn="@layout/activity_login">
+    tools:showIn="@layout/a_activity_login">
 
     <LinearLayout
         android:layout_width="match_parent"
