--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -132,6 +132,13 @@
             android:layout_marginTop="13dp"
             android:fontFamily="nanum_bold"
             android:text="회원가입" />
+        <Button
+            android:id="@+id/btn_scrolling"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="13dp"
+            android:text="스크롤링액티비티" />
     </LinearLayout>
 
     <LinearLayout
