--- a/app/src/main/res/layout/activity_signup_way.xml
+++ b/app/src/main/res/layout/activity_signup_way.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="kr.me.ansr.login.SignupWayActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -22,4 +24,4 @@
 
     <include layout="@layout/content_signup_way" />
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
