--- a/app/src/main/res/layout/a_content_main.xml
+++ b/app/src/main/res/layout/a_content_main.xml
@@ -6,9 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main"
+    tools:showIn="@layout/fragment_gcmchat"
     tools:context="kr.me.ansr.tab.chat.GcmChatFragment">
-
+    <!-- showIn fragment_chatroom-->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
