--- a/app/src/main/res/layout/fragment_gcmchat.xml
+++ b/app/src/main/res/layout/fragment_gcmchat.xml
@@ -8,6 +8,22 @@
     android:fitsSystemWindows="true"
     tools:context="kr.me.ansr.tab.chat.GcmChatFragment">
 
+
+
     <include layout="@layout/a_content_main"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_dialog_email"
+        app:layout_scrollFlags="scroll|enterAlways"
+        app:layout_anchor="@id/recycler_view"
+        app:layout_anchorGravity="bottom|right|end"
+
+        />
+    <!-- app:layout_scrollFlags="scroll|enterAlways"-->
 
 </android.support.design.widget.CoordinatorLayout>
