--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -138,7 +138,7 @@
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:layout_marginTop="13dp"
-            android:text="스크롤링액티비티" />
+            android:text="SignUpAccountActivity" />
     </LinearLayout>
 
     <LinearLayout
