--- a/app/src/main/res/layout/content_sign_up_account.xml
+++ b/app/src/main/res/layout/content_sign_up_account.xml
@@ -9,26 +9,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="kr.me.ansr.gcmchat.activity.LoginActivity"
-    tools:showIn="@layout/a_activity_login">
+    tools:context="kr.me.ansr.login.SignUpAccountActivity"
+    tools:showIn="@layout/activity_sign_up_account">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/input_pw"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/hint_name" />
-
-        </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_email"
@@ -43,10 +30,44 @@
 
         </android.support.design.widget.TextInputLayout>
 
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_pw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/input_pw"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:hint="@string/hint_pw" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_pw_confirm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+            <EditText
+                android:id="@+id/input_pw_confirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:hint="@string/hint_pw_confirm" />
+        </android.support.design.widget.TextInputLayout>
+        <TextView
+            android:id="@+id/text_signup_account_confirm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="비밀번호가 일치합니다."
+            android:textSize="14sp"
+            android:textColor="@color/colorAccent"/>
         <Button android:id="@+id/btn_enter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Enter" />
+            android:text="확인" />
 
     </LinearLayout>
 
