--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -138,30 +138,6 @@
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:layout_marginTop="13dp"
-            android:text="SignUpAccountActivity" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <Button android:id="@+id/registrationButton"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/registering_message_ready" />
-
-        <TextView
-            android:id="@+id/informationTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="informationTextView"
-            android:textAppearance="?android:attr/textAppearanceMedium"/>
-
-        <ProgressBar
-            android:id="@+id/registrationProgressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-             />
+            android:text="goto tests.." />
     </LinearLayout>
 </LinearLayout>
