--- a/app/src/main/res/layout/fragment_image_home.xml
+++ b/app/src/main/res/layout/fragment_image_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="?attr/actionBarSize"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,6 +15,18 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"/>
 
+    <com.github.siyamed.shapeimageview.CircularImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:id="@+id/image_image_home_profile"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:src="@mipmap/ic_launcher"
+        android:alpha="1"
+        app:siBorderWidth="3dp"
+        app:siBorderColor="@color/list_divider"/>
+<!--
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
@@ -22,7 +35,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:src="@mipmap/ic_launcher"/>
-
+-->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
