--- a/app/src/main/res/layout/fragment_friends_section.xml
+++ b/app/src/main/res/layout/fragment_friends_section.xml
@@ -108,9 +108,18 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recycler" />
+        android:id="@+id/refresh"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/edit_keyword">
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recycler" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
