--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal" >
 
         <EditText
-            android:id="@+id/board_editText1"
+            android:id="@+id/edit_friends_search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -20,7 +20,7 @@
             android:inputType="text" />
 
         <Button
-            android:id="@+id/board_btn_search"
+            android:id="@+id/btn_friends_search"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="80dp"
             android:layout_height="match_parent"
