--- a/app/src/main/res/layout/fragment_friends_section.xml
+++ b/app/src/main/res/layout/fragment_friends_section.xml
@@ -5,20 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="kr.me.ansr.tab.friends.FriendsFragment" >
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="kr.me.ansr.tab.friends.recycler.FriendsSectionFragment" >
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/refresh"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/edit_keyword">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:id="@+id/refresh">
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/recycler" />
+            android:id="@+id/recycler"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            />
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
