--- a/app/src/main/res/layout/fragment_board_one.xml
+++ b/app/src/main/res/layout/fragment_board_one.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/list_divider"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".tab.board.one.ChildOneFragment">
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="fragment_board_one textview" />
-
-    <ListView
-        android:id="@+id/boardOne_listView1"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </ListView>
+        android:layout_height="match_parent"
+        android:paddingTop="@dimen/board_padding_size"
+        android:paddingBottom="0dp"
+        android:paddingLeft="@dimen/board_padding_size"
+        android:paddingRight="@dimen/board_padding_size"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
