--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="text_margin">16dp</dimen>
 
     <dimen name="scrollview_size">100dp</dimen>
+    <dimen name="board_padding_size">10dp</dimen>
 </resources>
