--- a/app/src/main/res/layout/view_board_layout.xml
+++ b/app/src/main/res/layout/view_board_layout.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/image_board_icon"
+            android:id="@+id/image_board_thumb"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_margin="2dp"
@@ -41,14 +41,14 @@
                 android:orientation="horizontal"
                 android:layout_gravity="center_vertical">
                 <TextView
-                    android:id="@+id/text_friedns_stuid"
+                    android:id="@+id/text_board_stuid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="16"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 <TextView
-                    android:id="@+id/text_friends_dept"
+                    android:id="@+id/text_board_dept"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="컴퓨터 공학"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:text="타임스탬프"
-                android:textSize="16sp"
+                android:textSize="12sp"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
             <TextView
                 android:id="@+id/text_board_imageView"
@@ -94,17 +94,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="36dp"
         android:orientation="vertical">
         <TextView
-            android:id="@+id/text_board_content"
+            android:id="@+id/text_board_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="3"
             android:ellipsize="end"
             android:text="교양 수업 스포츠 문화 책 구합니다."/>
         <TextView
-            android:id="@+id/text_board_content_add"
+            android:id="@+id/text_board_body_add"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:visibility="gone"
             android:layout_width="wrap_content"
@@ -114,28 +115,36 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
             android:layout_gravity="end"
             android:orientation="horizontal">
             <ImageView
-                android:id="@+id/icon_board_reply"
+                android:id="@+id/image_board_reply"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:background="@mipmap/ic_launcher"/>
             <TextView
-                android:id="@+id/text_board_reply"
+                android:id="@+id/text_board_reply_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="5"/>
-            <ImageView
-                android:id="@+id/icon_board_like"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:background="@mipmap/ic_launcher"/>
-            <TextView
-                android:id="@+id/text_board_like"
+
+            <LinearLayout
+                android:id="@+id/linear_like_layout"
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10"/>
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/image_board_like"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/b_main_view_contents_icon_05_off" />
+                <TextView
+                    android:id="@+id/text_board_like_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10" />
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
