--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="scrollview_size">100dp</dimen>
     <dimen name="activity_padding_zero">0dp</dimen>
     <dimen name="board_padding_size">4dp</dimen>
+    <dimen name="board_write_layout_margin">10dp</dimen>
 </resources>
