--- a/app/src/main/res/layout/content_friends_detail.xml
+++ b/app/src/main/res/layout/content_friends_detail.xml
@@ -32,7 +32,7 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_gravity="bottom|left"
-            android:background="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher" />
 
 
         <LinearLayout
