--- a/app/src/main/res/layout/view_section_child.xml
+++ b/app/src/main/res/layout/view_section_child.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#ffffff"
     android:orientation="horizontal" >
 
@@ -11,7 +11,7 @@
         android:layout_height="30dp"
         android:layout_margin="2dp"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_launcher" />
+        android:src="@mipmap/ic_launcher" />
 
     <FrameLayout
         android:layout_width="wrap_content"
